--- a/index.css
+++ b/index.css
@@ -63,6 +63,7 @@ width: 150px;}
 .card{
   background-color: #e63946 !important;
   margin-bottom: 25px !important;
+  width: 18rem !important;
   text-align: center;
 }
 
